# purl-license-checker

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency_enforcement.yml  ruff.yml
src/: cli.py  pyproject.toml
src/purl_license_checker/: cli.py  parser.py
