[tool.poetry]
name = "purl-license-checker"
version = "0.0.1"
description = "Retrieve licenses for purl documented dependencies."
authors = ["jboursier <jboursier@malwarebytes.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Malwarebytes/purl-license-checker"
documentation = "https://github.com/Malwarebytes/purl-license-checker/wiki"
repository = "https://github.com/Malwarebytes/purl-license-checker"
keywords = ["security", "cli", "license", "purl", "opensource", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]
include = ["src/cli.py"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = ">=8"
requests = "*"
configparser = "*"
python-magic = "*"
urllib3 = ">=1.26.12,<3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
purl-license-checker = 'src.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
